2004-10-19	blytkerchan	remove last remnants of obsolete code
	* glib/*: remove
	* c_interface.cc: ditto
	* c_interface.h: ditto
	* hash.c: remove all obsolete code
	* hash.h: ditto

fix the vector implementation
	* vector.c (internal_resize): fix type-o in name
	use compare_and_exchange_ptr or compare_and_exchange_int in stead of
	compare_and_exchange
	(vector_put): ditto (second)
	(vector_copy): use vector_new in stead of new_vector
	(vector_merge1): ditto
	(vector_deep_copy): ditto
	(vector_merge): lock the proper vectors, properly
	(vector_set_default_increase): use atomic_set_int in stead of
	atomic_set

2004-10-18	blytkerchan
	* vector.h [vector_t]: fix rw-spinlock type
	* module.mk [libcontain_SRC]: add vector.c

remove references to C++ hash implementation
	* module.mk: remove anything related to the C++ hash implementation

obsolete C++ hash implementation
	* Hash.7.pod: remove
	* Hash.cc: ditto
	* Hash.h: ditto
	* IniHash.cc: ditto
	* IniHash.h: ditto
	* IntHash.cc: ditto
	* IntHash.h: ditto
	* Makefile.am: ditto
	* NocaseStringHash.cc: ditto
	* NocaseStringHash.h: ditto
	* StringHash.cc: ditto
	* StringHash.h: ditto

2004-08-22	blytkerchan
	* vector.c (interal_resize): move rw_spinlock_downgrade call down to
	protect node pointer replacement

2004-08-11	blytkerchan
	* array.c (array_put): use compare_and_exchange_ptr in stead of
	obsolete compare_and_exchange
	* binomial_tree.c (binomial_tree_get): ditto
	(binomial_tree_set_root): ditto
	(binomial_tree_node_set_left): ditto
	(binomial_tree_node_set_right): ditto
	(binomial_tree_node_set_value): ditto
	* list.c (list_find): ditto
	(list_delete): ditto
	* map.c (map_remove): ditto
	* queue.c (queue_enq): ditto
	(queue_deq): ditto
	* stack.c (free_stack): ditto
	(stack_pop): ditto
	(stack_push): ditto
	* heap.c (heap_select_node): use uint32_t for exp
	use compare_and_exchange_int in stead of obsolete compare_and_exchange
	(heap_fix): ditto (both)
	(heap_add): use uint32_t for o_n, n and exp